# cuda_ops

./: CMakeLists.txt  README.md
1_cuda_reduce/: CMakeLists.txt  my_reduce_1.cu  my_reduce_shuffle.cu
2_cuda_segmm/: CMakeLists.txt  my_segmm_1.cu  my_segmm_2.cu
3_cuda_elementwise/: CMakeLists.txt  my_add_1.cu  my_relu.cu  my_sigmoid.cu
4_cuda_softmax/: CMakeLists.txt  my_softmax.cu
